zeroclaw/check_error.txt
    Checking zeroclawlabs v0.3.2 (C:\Users\tanma\Downloads\Zero-Assist\zeroclaw)
warning: unused import: `ServiceExt`
  --> src\gateway\mod.rs:36:5
   |
36 |     ServiceExt,
   |     ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `zeroclawlabs` (lib) generated 1 warning
error[E0308]: mismatched types
   --> src\main.rs:817:17
    |
814 |             let pairing = security::PairingGuard::new(
    |                           --------------------------- arguments to this function are incorrect
...
817 |                 &config.gateway.api_keys,
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^ expected `&[String]`, found `&Vec<ApiKey>`
    |
    = note: expected reference `&[std::string::String]`
               found reference `&Vec<config::schema::ApiKey>`
note: associated function defined here
   --> src\security\pairing.rs:64:12
    |
 64 |     pub fn new(
    |            ^^^
...
 67 |         api_keys: &[String],
    |         -------------------

For more information about this error, try `rustc --explain E0308`.
warning: `zeroclawlabs` (bin "zeroclaw") generated 1 warning (1 duplicate)
error: could not compile `zeroclawlabs` (bin "zeroclaw") due to 1 previous error; 1 warning emitted
